# duct-tape

./: .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  setup.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  reset_db.py  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_enable_rls.py  003_create_jobs_table.py  004_resource_management_tables.py  005_calendar_ical_token.py  006_coordination_layer_tables.py  007_notification_message_last_seen.py  008_security_hardening.py  009_refresh_tokens.py  010_add_user_name.py  011_intake_and_rental.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: conflicts.py  file_storage.py  icalendar.py  permissions.py  security.py  state_machine.py  task_state.py  websocket_manager.py
backend/app/models/: __init__.py  assignment.py  availability.py  base.py  crew_profile.py  equipment.py  file.py  ical_token.py  job.py  message.py  message_file.py  message_last_seen.py  rating.py  refresh_token.py  task.py  tenant.py  token.py  user.py
backend/app/schemas/: __init__.py  assignment.py  auth.py  calendar.py  crew.py  equipment.py  file.py  job.py  task.py  (+4 more)
backend/tests/: __init__.py  conftest.py  test_assignments.py  test_auth.py  test_availability.py  test_calendar_availability.py  test_calendar_events.py  test_conflicts.py  test_crew_crud.py  test_crew_matrix.py  test_equipment_crud.py  test_files.py  test_ical.py  test_invitations.py  test_invitations_tdd.py  test_job_model.py  test_job_transitions.py  test_jobs_crud.py  test_messages.py  test_notifications_counts.py  test_notifications_email.py  test_permissions.py  test_portal_actions.py  test_portal_dashboard.py  test_ratings.py  test_security.py  test_state_machine.py  test_task_state.py  test_tasks.py  test_tenant_isolation.py  test_websocket.py
(+153 files in other folders)
