[project]
name = "duct-tape-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.136.1",
    "uvicorn[standard]==0.47.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "asyncpg",
    "pydantic==2.13.4",
    "pydantic-settings",
    "pyjwt==2.12.1",
    "passlib==1.7.4",
    "bcrypt",
    "python-multipart==0.0.28",
    "email-validator",
    "python-dotenv",
    "redis==7.4.0",
    "celery==5.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx",
    "black",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
