[project]
name = "duct-tape-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.136.1",
    "uvicorn[standard]==0.47.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "asyncpg>=0.30.0",
    "pydantic==2.13.4",
    "pydantic-settings>=2.0",
    "pyjwt==2.12.1",
    "bcrypt>=4.0",
    "python-multipart==0.0.28",
    "email-validator>=2.0",
    "python-dotenv>=1.0",
    "redis==7.4.0",
    "celery==5.6.3",
    "icalendar==7.1.0",
    "aiofiles>=0.24.0",
    "python-magic>=0.4.27",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx",
    "black",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
